Added a custom icon set

--- a/app/elements/twitchteam-scaffold/twitchteam-scaffold.scss
+++ b/app/elements/twitchteam-scaffold/twitchteam-scaffold.scss
@@ -35,8 +35,8 @@ core-menu#menu {
   margin: 0;
 }
 
-polyfill-next-selector { content: 'core-menu#menu core-item'; }
-::content core-item, ::content core-submenu::shadow core-item {
+polyfill-next-selector { content: 'core-menu#menu paper-item'; }
+::content paper-item, ::content core-submenu::shadow paper-item {
   height: 56px;
   padding-left: 60px;
   font-size: 15px;
@@ -44,8 +44,8 @@ polyfill-next-selector { content: 'core-menu#menu core-item'; }
   font-weight: normal !important;
 }
 
-polyfill-next-selector { content: 'core-menu#menu core-item.core-selected'; }
-::content core-item.core-selected {
+polyfill-next-selector { content: 'core-menu#menu paper-item.core-selected'; }
+::content paper-item.core-selected {
   background-color: #dedede;
 }
 
@@ -75,8 +75,8 @@ polyfill-next-selector { content: '.sourceButton';}
 
 polyfill-next-selector { content: '.sourceButton:not(.fallback)';}
 ::content .sourceButton:not(.fallback) {
-  background-color: #AEEA00;
-  color: #000;
+  background-color: #6441A5;
+  color: #fff;
   bottom: -28px;
   right: 24px;
 }
