--- a/app/elements/twitchteam-scaffold/twitchteam-scaffold.scss
+++ b/app/elements/twitchteam-scaffold/twitchteam-scaffold.scss
@@ -35,17 +35,16 @@ core-menu#menu {
   margin: 0;
 }
 
-polyfill-next-selector { content: 'core-menu#menu paper-item'; }
-::content paper-item, ::content core-submenu::shadow paper-item {
-  height: 56px;
-  padding-left: 60px;
+polyfill-next-selector { content: 'core-menu#menu twitchteam-broadcaster'; }
+::content twitchteam-broadcaster, ::content core-submenu::shadow twitchteam-broadcaster {
   font-size: 15px;
   color: #444;
   font-weight: normal !important;
+  margin-bottom: 4px;
 }
 
-polyfill-next-selector { content: 'core-menu#menu paper-item.core-selected'; }
-::content paper-item.core-selected {
+polyfill-next-selector { content: 'core-menu#menu twitchteam-broadcaster.core-selected'; }
+::content twitchteam-broadcaster.core-selected {
   background-color: #dedede;
 }
 
