--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700|Varela+Round);
+@import url(//fonts.googleapis.com/css?family=Montserrat:400,700|Varela+Round);
 
 body {
   background: #fafafa;
